# ats

./: .gitignore  LICENSE  README.md  SEED.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .env.example  .gitignore  package.json  prisma.config.d.ts  prisma.config.d.ts.map  prisma.config.js  prisma.config.ts  tsconfig.build.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts  seed2.ts  split-auth-identities.ts
apps/api/scripts/: trigger-evaluations.ts
apps/api/src/: app.module.ts  main.ts
apps/fastapi/: .env.example  .gitignore  README.md  package.json  pyproject.toml
apps/fastapi/scripts/: generate-seed-embeddings.py
apps/fastapi/src/fastapi_service/: config.py  cv_parser.py  embedding_worker.py  environment.py  job_summary_worker.py  main.py  normalize_embeddings_backfill.py  supabase_client.py  worker.py
apps/fastapi/src/fastapi_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/fastapi/src/fastapi_service/candidate_profile/: prompt_builder.py  router.py  schemas.py  service.py
apps/fastapi/src/fastapi_service/company_values/: prompt_builder.py  router.py  schemas.py  service.py
apps/fastapi/src/fastapi_service/evaluation/: algorithm.py  feedback_prompt.py  worker.py
apps/fastapi/src/fastapi_service/job_offer_skills/: prompt_builder.py  router.py  schemas.py  service.py
apps/web/: .env.example  README.md  auth-client.ts  auth.ts  components.json  next.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  providers.tsx
(+320 files in other folders)
