[project]
name = "fastapi-service"
version = "0.1.0"
description = "FastAPI microservice for ATS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "bullmq>=2.0.0",
  "pypdf>=5.4.0",
  "supabase>=2.10.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_service"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
